<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:padding="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:orientation="horizontal"
    android:background="@drawable/border_radius_with_black">

    <ImageView
        android:id="@+id/img_search_food"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:scaleType="fitXY"
        android:background="@drawable/border_radius_with_black"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:background="@drawable/square_background_border_black">
        <TextView
            android:text="@string/item_stall_name_text"
            android:id="@+id/text_search_stall_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/square_background_border_black"/>

        <TextView
            android:text="@string/item_food_name_text"
            android:id="@+id/text_search_food_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/square_background_border_black"/>

        <TextView
            android:id="@+id/text_search_food_info"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/square_background_border_black"/>

        <TextView
            android:id="@+id/text_search_food_price"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/item_food_price_text"
            android:background="@drawable/square_background_border_black"/>
    </LinearLayout>
</LinearLayout>

