<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".login.SignupActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:gravity="center|left"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="간식 뭐먹지?"
                    android:textColor="@color/black"
                    android:textSize="21dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Sign Up" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:hint="@string/email_text"
                    android:inputType="textEmailAddress"
                    android:text="" />
            </LinearLayout>

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/password_text"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/edit_usertype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:hint="1: 고객, 2: 점주"
                android:inputType="text" />

            <Button
                android:id="@+id/signup_okButton"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text="@string/signUp_text"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>
